# triray

./: .gitignore  CMakeLists.txt  README.md  gbbeam.c  triray.c
Triangles/lib/: check.c  circum.c  colinear.c  create.c  delete.c  distance.c  fixedges.c  inside.c  nearest.c  project.c  readwrite.c
demo/: Beams  Model  Rays
